--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'tippy.js/dist/tippy.css';
+@import 'tippy.js/animations/scale.css';
+@import 'tippy.js/themes/light.css';
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -69,4 +73,20 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.tippy-box {
+  background-color: transparent !important;
+  border: none !important;
+  border-radius: 0.5rem !important;
+  padding: 0 !important;
+  max-width: none !important;
+}
+
+.tippy-content {
+  padding: 0 !important;
+}
+
+.tippy-arrow {
+  display: none !important;
 }
